--- a/pizzaplace/css/styles.css
+++ b/pizzaplace/css/styles.css
@@ -1,8 +1,3 @@
-body{
-    background: linear-gradient(70deg, #e6e6e6, #f7f7f7);
-    color: yellow;
-    min-height: 100vh;
-    padding: 0;
-    margin: 0;
+.introduction{
+    height: 700px;
 }
-
