--- a/pizzaplace/css/bootstrap.css
+++ b/pizzaplace/css/bootstrap.css
@@ -58,9 +58,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: white;
+  color: black;
   text-align: left;
-  background-color: #fff;
+  background-color: white;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
