--- a/pizzaplace/css/styles.css
+++ b/pizzaplace/css/styles.css
@@ -1,10 +1,35 @@
-.introduction{
-    
+body{
+    font-family: 'Raleway', sans-serif;
 }
+
 
 .features{
     text-align: center;
     padding-left: 300px;
     padding-right: 300px;
     margin-top: 70px;
+}
+
+.someoneSays{
+    text-align: center;
+    margin-top: 100px;
+}
+
+
+.container {
+    position: relative;
+    font-family: Arial;
+  }
+  
+  .text-block {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    background-color: white;
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: transparent;
+    border-radius: 25px;
+    
 }
